force-app/main/default/objects/Invoice__c/fields/After_Tax__c.field-meta.xml
<CustomField>
    <fullName>After_Tax__c</fullName>
    <formula>Subtotal__c -  Tax_amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>After Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>