force-app/main/default/objects/Invoice__c/fields/Due_date__c.field-meta.xml
<CustomField>
    <fullName>Due_date__c</fullName>
    <formula>Submitted_date__c +  Course__r.Account.Payment_terms__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due date</label>
    <type>Date</type>
</CustomField>