force-app/main/default/objects/Invoice__c/fields/Service_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Service_Invoice_Number__c</fullName>
    <description>Service Invoices should be identified with an Invoice Number field which should take the format INV-{0000}.</description>
    <displayFormat>INV-{0000}</displayFormat>
    <label>Service Invoice Number</label>
    <type>AutoNumber</type>
</CustomField>