force-app/main/default/objects/Invoice__c/fields/Status_rating__c.field-meta.xml
<CustomField>
    <fullName>Status_rating__c</fullName>
    <formula>IF(ISPICKVAL(Status__c, &quot;Paid&quot;), 
 IMAGE(&quot;/img/icon/entitlements24.png&quot;, &quot;Gold Medal&quot;),
IF(ISPICKVAL(Status__c, &quot;Submitted&quot;), 
IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red to-do flag&quot;),

IF(ISPICKVAL(Status__c, &quot;Draft&quot;), 
IMAGE(&quot;/img/func_icons/util/pencil12.gif&quot;, &quot;Draft pencil&quot;),



&quot;No status&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status rating</label>
    <type>Text</type>
</CustomField>