force-app/main/default/objects/Invoice__c/fields/Submitted_date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_date__c</fullName>
    <label>Submitted date</label>
    <type>Date</type>
</CustomField>