force-app/main/default/objects/Invoice__c/fields/Tax_amount__c.field-meta.xml
<CustomField>
    <fullName>Tax_amount__c</fullName>
    <formula>Tax_rate__c *  Subtotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>