force-app/main/default/objects/Invoice__c/fields/Tax_rate__c.field-meta.xml
<CustomField>
    <fullName>Tax_rate__c</fullName>
    <defaultValue>0.3</defaultValue>
    <label>Tax rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>