force-app/main/default/objects/Invoice__c/fields/VAT_Rate__c.field-meta.xml
<CustomField>
    <fullName>VAT_Rate__c</fullName>
    <defaultValue>0.2</defaultValue>
    <label>VAT Rate</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>