force-app/main/default/objects/Invoice__c/recordTypes/Expense_invoice.recordType-meta.xml
<RecordType>
    <fullName>Expense_invoice</fullName>
    <active>true</active>
    <description>Use to create expense invoices.</description>
    <label>Expense invoice</label>
</RecordType>