force-app/main/default/objects/Invoice__c/recordTypes/Service_invoice.recordType-meta.xml
<RecordType>
    <fullName>Service_invoice</fullName>
    <active>true</active>
    <description>Use to create service invoice</description>
    <label>Service invoice</label>
</RecordType>