force-app/main/default/objects/Invoice__c/validationRules/Future_paid_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Future_paid_date</fullName>
    <active>true</active>
    <errorConditionFormula>Paid_date__c &gt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Paid_date__c</errorDisplayField>
    <errorMessage>Paid date must not be in the future</errorMessage>
</ValidationRule>