force-app/main/default/objects/Invoice__c/validationRules/Future_submit_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Future_submit_date</fullName>
    <active>true</active>
    <errorConditionFormula>Submitted_date__c  &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Submitted_date__c</errorDisplayField>
    <errorMessage>Submitted date must not be in the future</errorMessage>
</ValidationRule>