force-app/main/default/objects/Invoice__c/validationRules/Paid_date_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Paid_date_required</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c, &quot;Paid&quot;)   &amp;&amp;   ISBLANK(Paid_date__c)</errorConditionFormula>
    <errorDisplayField>Paid_date__c</errorDisplayField>
    <errorMessage>Please enter a paid date for this invoice</errorMessage>
</ValidationRule>