force-app/main/default/objects/Invoice__c/validationRules/Submitted_date_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Submitted_date_required</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c, &quot;Submitted&quot;)   &amp;&amp;   ISBLANK( Submitted_date__c )</errorConditionFormula>
    <errorDisplayField>Submitted_date__c</errorDisplayField>
    <errorMessage>Please enter a submitted date for this invoice</errorMessage>
</ValidationRule>