force-app/main/default/objects/Invoice__c/listViews/list1.listView-meta.xml
<ListView>
    <fullName>list1</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>list1</label>
</ListView>